--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="actions">
         <h2>Get the App For:</h2>
         <div class="action-buttons">
-            <button>Vendor 🍔</button>
+            <button onclick="navigateVendor()">Vendor 🍔</button>
             <button>Foodie 🤤</button>
             <button>Delivery Guy 🚲</button>
         </div>
@@ -40,5 +40,10 @@
         </div>
         <p>© 2025 Sosika</p>
     </section>
+    <script>
+        function navigateVendor() {
+            window.location.href = 'vendor/index.html';
+        }
+    </script>
 </body>
 </html>
